# CosmicDNS

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
data/: com.github.davidboulay.CosmicAppletDNS.desktop
src/: backend.rs  main.rs  updater.rs  window.rs
